--- a/Projekat/Projekat/Projekat.csproj
+++ b/Projekat/Projekat/Projekat.csproj
@@ -82,6 +82,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rezervacija.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Rezervacija.Designer.cs">
+      <DependentUpon>Rezervacija.cs</DependentUpon>
+    </Compile>
     <Compile Include="Uposlenik.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +121,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Rezervacija.resx">
+      <DependentUpon>Rezervacija.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Uposlenik.resx">
       <DependentUpon>Uposlenik.cs</DependentUpon>
     </EmbeddedResource>
