--- a/Projekat/Projekat/Projekat.csproj
+++ b/Projekat/Projekat/Projekat.csproj
@@ -44,23 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CheckIn.cs">
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CheckIn.Designer.cs">
-      <DependentUpon>CheckIn.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Pocetna.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Pocetna.Designer.cs">
-      <DependentUpon>Pocetna.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Glavna.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Glavna.Designer.cs">
-      <DependentUpon>Glavna.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Let.cs">
       <SubType>Form</SubType>
@@ -74,43 +62,16 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="PregledDokumenata.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PregledDokumenata.Designer.cs">
-      <DependentUpon>PregledDokumenata.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rezervacija.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Rezervacija.Designer.cs">
-      <DependentUpon>Rezervacija.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Uposlenik.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Uposlenik.Designer.cs">
-      <DependentUpon>Uposlenik.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="CheckIn.resx">
-      <DependentUpon>CheckIn.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Pocetna.resx">
-      <DependentUpon>Pocetna.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Glavna.resx">
-      <DependentUpon>Glavna.cs</DependentUpon>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Let.resx">
       <DependentUpon>Let.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PregledDokumenata.resx">
-      <DependentUpon>PregledDokumenata.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -121,12 +82,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Rezervacija.resx">
-      <DependentUpon>Rezervacija.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Uposlenik.resx">
-      <DependentUpon>Uposlenik.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
