--- a/Projekat/Projekat/Projekat.csproj
+++ b/Projekat/Projekat/Projekat.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Karta.cs" />
     <Compile Include="Let.cs" />
     <Compile Include="Pocetna.cs">
       <SubType>Form</SubType>
@@ -65,6 +66,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Prtljag.cs" />
+    <Compile Include="Putnik.cs" />
+    <Compile Include="Spasavanje.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Spasavanje.Designer.cs">
+      <DependentUpon>Spasavanje.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TipAviona.cs" />
     <EmbeddedResource Include="Pocetna.resx">
       <DependentUpon>Pocetna.cs</DependentUpon>
     </EmbeddedResource>
@@ -83,6 +93,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Spasavanje.resx">
+      <DependentUpon>Spasavanje.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
